Made some changes to ChiliPeppr widget using Cloud9

--- a/widget.html
+++ b/widget.html
@@ -43,6 +43,7 @@
                 <ul class="dropdown-menu" role="menu">
                     <li class=""><a href="javascript:" id="com-chilipeppr-widget-serialport-tbar-disconws">Connect to Alternate Host/IP</a></li>
                     <li><a href="javascript:" id="com-chilipeppr-widget-serialport-tbar-showhideconsole">Show / Hide Console</a></li>
+                    <li><a href="javascript:" id="com-chilipeppr-widget-serialport-tbar-clearconsole">Clear Console</a></li>
                     <!-- <li><a href="javascript:" id="com-chilipeppr-widget-serialport-tbar-showhidestatus">Show / Hide Status</a></li> -->
                     <li class="divider"></li>
                     <li class="hidden"><a href="javascript:" id="com-chilipeppr-widget-serialport-tbar-disconws">Disconnect</a></li>
