--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -964,6 +964,7 @@ chilipeppr.publish("/com-chilipeppr-widget-serialport/send", "G1 X10 F500\\n");
             
         },
         consoleClear: function() {
+            var log = this.logEls.log;
             log.html("");
         },        
         statusToggle: function() {
